# jaiger

./: LICENSE  README.md  pyproject.toml
examples/: README.md
examples/simple_app/: README.md  simple_app.json  simple_app.py  tools.py
examples/web_ui_app/: README.md  components.py  requirements.txt  tools.py  web_ui_app.json  web_ui_app.py
jaiger/: __init__.py  configs.py  main.py  models.py  tool.py  tool_manager.py  tool_process.py  utils.py
jaiger/ai/: ai_manager.py  anthropic_model.py  google_model.py  model.py  ollama_model.py  openai_model.py
jaiger/http/: http_client.py  http_server.py
jaiger/rpc/: models.py  rpc_broker.py  rpc_client.py  rpc_server.py
jaiger/tool/: tool.py  tool_manager.py  tool_process.py
